Tue May 05 13:10:44 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc,
	  common/io_utils.cc,common/io_utils.h,tests/api_backend.cc:
	  Avoid using fds < 3 for writable database tables, as it risks
	  corruption is some code in the same process tries to write to stdout
	  or stderr without realising it is closed.  (Partly addresses #651)

Tue May 05 13:10:44 GMT 2015  Olly Betts <olly@survex.com>

	* matcher/exactphrasepostlist.cc: Fixed reversed conditonal for
	  picking the shorter position list for an exact phrase of two terms.
	  The difference this fix makes isn't dramatic, but can be measured
	  (at least with cachegrind).  Thanks to kbwt for spotting this.

Tue May 05 13:06:13 GMT 2015  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/flint/flint_compact.cc:
	  Make sure we open all the tables of a database at the same revision
	  when compacting for brass and flint too.  (Fixes #649)

Tue May 05 12:52:17 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Make sure we open all the tables of
	  a database at the same revision when compacting.  (Fixes #649)

Tue May 05 12:48:01 GMT 2015  Olly Betts <olly@survex.com>

	* examples/xapian-metadata.cc: Add 'list' subcommand to list all the
	  metadata keys.

Tue May 05 12:07:10 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Doxygen comment wording tweaks.

Tue May 05 12:04:02 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Doxygen comment formatting tweaks.

Tue May 05 11:48:57 GMT 2015  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Extend the
	  set of characters allowed in the start of a range to be anything
	  except for '(' and characters <= ' '.  This better matches what's
	  accepted for a range end (anything except for ')' and characters <=
	  ' ').  Reported by Jani Nikula.
