@@ -17,7 +17,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/common -I$(top_srcdir)/include
 if VPATH_BUILD
 # Needed for the generated files include/xapian/version.h
 # include/xapian/error.h and include/xapian/errordispatch.h
-AM_CPPFLAGS += -I$(top_builddir)/include
+AM_CPPFLAGS += -I'$(top_builddir)/include'
 endif
 
 # Order is relevant: when building, tests must be after ".".
